feat: images update

--- a/public/ProjectsConfig.json
+++ b/public/ProjectsConfig.json
@@ -21,6 +21,7 @@
             "bernina2.jpg",
             "bernina3.jpg",
             "bernina4.jpg",
+            "bernina6.jpg",
             "bernina5.jpg",
             "alpgrum1.jpg",
             "alpgrum2.jpg",
